objects/LCRM_Contact_Entitlement__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Source_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Source System</label>
        <referenceTo>LCRM_Contact_SSD__c</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invited_Colleagues__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invited Colleagues</label>
        <referenceTo>Invite_Colleagues__c</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Access_End_Date__c</fullName>
        <label>Access End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Access_Start_Date__c</fullName>
        <label>Access Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Apttus_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CRM-13753 : Apttus Asset Lookup Field on the Contact Entitlement Object</description>
        <label>Apttus Asset</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Asset_Type__c</fullName>
        <formula>LCRM_Asset__r.LCRM_Asset_Type__c</formula>
        <label>Asset Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>Contact_Entitlements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contact Entitlements</relationshipLabel>
        <relationshipName>Contact_Entitlements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_HasNoEndDate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasNoEndDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Domain__c</fullName>
        <formula>LCRM_Asset__r.Product2.LCRM_Product_Domain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Title__c</fullName>
        <formula>LCRM_Asset__r.Product2.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_Usage_Report__c</fullName>
        <formula>LCRM_Asset__r.LCRM_Usage_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Usage Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LCRM_Product_UserID__c</fullName>
        <label>Product UserID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Status__c</fullName>
        <label>Trial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Trial Initiated</fullName>
                </value>
                <value>
                    <fullName>Trial Started</fullName>
                </value>
                <value>
                    <fullName>Trial Expired</fullName>
                </value>
                <value>
                    <fullName>Trial Extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact Entitlement</label>
    <nameField>
        <label>Contact Entitlements Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contact Entitlements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>